# caRtola

./: .dive-ci  .dockerignore  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.en.md  README.md  a.txt  caRtola.Rproj.RData  caRtola_como_ler_repositório_do_github_com_BeautifulSoup_e_Pandas.ipynb  pyproject.toml  raw_data_2014.csv  raw_data_2015.csv  raw_data_2016.csv  raw_data_2017.csv  raw_data_2018.csv  raw_data_2019.csv  raw_data_2020.csv  raw_data_2021.csv  raw_data_2022.csv  tratamento_de_dados.ipynb
.github/: CODEOWNERS
.github/workflows/: ci.yml  requirements-ci.txt  requirements.txt
caRtola_app1/: server.R  ui.R
conf/: README.md
conf/base/: catalog.yml  catalog_2014.yml  catalog_2015.yml  catalog_2016.yml  catalog_2017.yml  catalog_2018.yml  catalog_2019.yml  catalog_2020.yml  catalog_2021.yml  catalog_2022.yml  catalog_2023.yml  catalog_2024.yml  catalog_2025.yml  catalog_2026.yml  logging.yml  parameters.yml  parameters_2014.yml  parameters_2015.yml  parameters_2016.yml  parameters_2017.yml  parameters_2018.yml  parameters_2019.yml  parameters_2020.yml  parameters_2021.yml  parameters_2022.yml  parameters_2023.yml  parameters_2024.yml  parameters_2025.yml  parameters_2026.yml
dashboard/cartola-stats/: server.R  ui.R
data/: BRA.csv  README.md  campeonato-brasileiro-full.csv  mapping_clubes.json  posicoes_ids.csv  scouts_value_per_year.csv  times_ids.csv
data/01_raw/: README.md
data/2014/: 2014_partidas_ids.csv  2014_scouts_raw.csv
data/2016/: 2016_partidas_ids.csv  README.md
data/2017/: 2017_tabela.csv  2017_times.csv  README.md
data/2018/: .~lock.2018_partidas.csv#  2018-medias-jogadores.csv  2018_jogadores.csv  2018_partidas.csv  2018_partidas_BACKUP_21538.csv  2018_partidas_LOCAL_21538.csv  2018_partidas_REMOTE_21538.csv  2018_tabelas.csv  README.md  rodada-1.csv  rodada-15.csv  rodada-18.csv  rodada-2.csv  rodada-24.csv  rodada-25.csv  rodada-26.csv  rodada-31.csv  rodada-32.csv  rodada-37.csv  rodada-4.csv  rodada-6.csv
data/2019/: 2019-medias-jogadores.csv  2019_partidas.csv  rodada-10.csv  rodada-13.csv  rodada-17.csv  rodada-2.csv  rodada-26.csv  rodada-3.csv  rodada-5.csv
data/2020/: 2020-medias-jogadores.csv  2020_partidas.csv  rodada-1.csv  rodada-10.csv  rodada-10.csv.orig  rodada-14.csv  rodada-2.csv  rodada-35.csv  rodada-5.csv  rodada-7.csv  rodada-7_BACKUP_4397.csv  rodada-7_REMOTE_4397.csv  rodada-8.csv
data/2021/: Mercado_1.txt  Mercado_10.txt  Mercado_16.txt  Mercado_28.txt  Mercado_30.txt  Mercado_5.txt
data/2022/: README.md  rodada-11.csv  rodada-12.csv  rodada-15.csv  rodada-18.csv  rodada-19.csv  rodada-3.csv
db/: cartola_samples.csv  cartola_scouts.csv  session.RData  teamCodes-previousYears.csv  teamids-consolidated.csv  teamids-consolidated_BACKUP_7687.csv  teamids-consolidated_LOCAL_7687.csv
db/2014/: Atletas.csv  Clubes.csv  Posicoes.csv
db/2015/: RawToTidy.ipynb  cartolaDF.rds  cartolaDF.rds.RData  cartola_2015_Long.csv  matches-brasileirao-2015.csv
db/2016/: Posicoes.csv  Status.csv  matches-brasileirao-2016.csv  player_data.csv  player_scouts.csv  rodada-10.csv  rodada-11.csv  rodada-12.csv  rodada-14.csv  rodada-15.csv  rodada-16.csv  rodada-18.csv  rodada-19.csv  rodada-2.csv  rodada-20.csv  rodada-3.csv  rodada-4.csv  rodada-5.csv  rodada-6.csv  rodada-7.csv  rodada-8.csv  rodada-9.csv  tabela-times.csv  teams_ids.csv
db/2017/: .~lock.rodada-1.csv#  cartola_2017.csv  cartola_2017_clean.csv  cartola_2017_samples.csv  cartola_2017_scouts.csv  matches-brasileirao-2017.csv  rodada-0.csv  rodada-1.csv  rodada-10.csv  rodada-11.csv  rodada-12.csv  rodada-13.csv  rodada-14.csv  rodada-15.csv  rodada-16.csv  rodada-17.csv  rodada-18.csv  rodada-19.csv  rodada-2.csv  rodada-20.csv  rodada-21.csv  rodada-22.csv  rodada-23.csv  rodada-24.csv  rodada-25.csv  rodada-26.csv  rodada-27.csv  rodada-28.csv  rodada-29.csv  rodada-3.csv  rodada-30.csv  rodada-31.csv  rodada-32.csv  rodada-33.csv  rodada-34.csv  rodada-35.csv  rodada-36.csv  rodada-37.csv  rodada-38.csv  rodada-4.csv  (+7 more)
db/worldTeamData/: partiteAll  readme.md
docs/source/: conf.py  index.rst
lib/: caRtola_fetch.R  caRtola_fetch_17.R  create_model_features.R  data_wrangling.R  fix_player_and_team_id.R  merge_all_rounds_individual_stats_per_year.R  merge_team_home_away_info_to_player_data.R  model2015_data.R  select_16_players.R  team_data_analysis.R  team_data_scaper.R
lib/R/: caRtola_fetch.R  data_wrangling.R  merge_allPlayerData.R  merge_all_years.R  merge_allyears.R  rdata_2_sql.R  team_data_analysis.R  team_data_scraper.R
lib/deprecated/: fix_player_and_team_id.R
lib/python/: README.md  Samples Creator - Aggregated.ipynb  Samples Creator.ipynb  cartola.yml  dados_clean.csv
notebooks/: Análise dos Dados.ipynb  LSTM.ipynb  README.md  markov-chain-lpp.ipynb
notebooks/colabs/: caRtola_media_media_movel_media_casa_ou_fora_o_que_usar.ipynb
notebooks/desafio_valorizacao/: Desafio da Valorização.ipynb  Descobrindo o algoritmo de valorização do Cartola FC - Parte I.ipynb
src/: README.md  requirements.txt  setup.py
src/R/: README.md  caRtola_fetch.R  cartola_fetch.R  create_players_list.R  create_players_stats.R  create_team_scouts_stats.R  data_wrangling.R  fix_players_stats.R  merge_all_years.R  store_cartola_team_results.R  team_data_create_features.R  team_data_scraper.R  to_json.R  utils.R
src/cartola/: README.md  __init__.py  __main__.py  cli.py  download_data.py  pipeline_registry.py  settings.py  update_readme.py
src/python/: Desafio da Valorização.ipynb  LSTM.ipynb  README.md  cartola.yml  markov-chain-lpp.ipynb
src/tests/: test_run.py
tests/: conftest.py
tests/data/: conftest.py  test_per_year.py
tests/data_quality/: test_pandera_schema.py  test_real_data_smoke.py
tests/integration/: test_pipeline_end_to_end.py
tests/nodes/: test_merge_splitted_datasets_nodes.py  test_preprocessing_nodes.py
tutorials/: tut_0_vale_a_pena_usar_media.Rmd  tut_0_vale_a_pena_usar_media.html  tut_0_vale_a_pena_usar_media.md  tut_1_modelos_vs_media.Rmd
webapp-3t/: README.md
(+626 files in other folders)
