[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cartola"
version = "0.2.0"
description = "Extração de dados da API do CartolaFC, análise exploratória dos dados e modelos preditivos em R e Python - 2014-26."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Henrique Gomide", email = "henriquepgomide@gmail.com" },
    { name = "Arnaldo Gualberto", email = "arnaldo.g12@gmail.com" },
]
dependencies = [
    "kedro>=1.3.1,<2",
    "kedro-datasets[pandas]>=6.0",
    "pandas>=2.2",
    "Unidecode>=1.3.6",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "jupyterlab>=4.2",
    "jupyter>=1.1",
    "nbstripout>=0.7",
    "mypy>=1.11",
    "kedro-viz>=11.0",
]
test = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "pandera[pandas]>=0.31",
]
lint = [
    "ruff>=0.15.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cartola"]

[tool.kedro]
package_name = "cartola"
project_name = "caRtola"
kedro_init_version = "1.3.1"

[tool.ruff]
line-length = 120
exclude = [
    ".cache", ".config", ".ipython", ".dotnet", "jupyter", ".local",
    ".vscode-server", ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite",
    ".hg", ".ipynb", ".ipynb_checkpoints", ".mypy_cache", ".nox",
    ".pants.d", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache",
    ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build",
    "buck-out", "build", "dist", "node_modules", "site-packages", "venv",
    "data", "notebooks", "src/R",
]

[tool.ruff.lint]
select = [
    "D", "E", "F", "Q0", "T20", "COM", "FBT", "S", "YTT", "N",
    "I", "C90", "TID", "ERA", "RUF",
]
extend-select = ["E501"]
ignore = [
    "D417", "N815", "N803", "COM812", "N818", "N805", "COM819", "I001",
]
fixable = ["A", "B", "C", "D", "E", "F", "Q", "I"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"notebooks/**.ipynb" = ["E402"]
"**/tests/*.py" = ["D", "S101", "F403", "S106"]
"src/cartola/settings.py" = ["ERA001"]
"conf/**/*.py" = ["ERA001", "D"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = "src/tests"
python_files = ["test_*.py", "spec_*.py"]
norecursedirs = [".git", ".pytest_cache"]
markers = [
    "data: tests that load real CSVs from data/ (skip when missing)",
]
filterwarnings = [
    "error::UserWarning",
    "ignore::DeprecationWarning",
    "error::PendingDeprecationWarning",
]
addopts = """
    --color=yes
    -p no:cacheprovider
    --junitxml=report.xml
    --cov-report term-missing:skip-covered
    --cov-report xml
    --cov src/cartola -ra
"""

[tool.coverage.paths]
source = ["src/cartola/"]

[tool.coverage.run]
source = ["src/cartola"]
omit = [
    "__init__.py",
    "tests/*",
    "*/.ipynb_checkpoints/*",
    "*/src/cartola/__main__.py",
    "*/src/cartola/download_data.py",
    "*/src/cartola/update_readme.py",
    "*/src/cartola/pipelines/**/pipeline.py",
    "*/src/cartola/pipeline_registry.py",
    "*/src/cartola/settings.py",
]

[tool.coverage.report]
show_missing = true
include_namespace_packages = true
fail_under = 90
precision = 2
exclude_lines = ["raise NotImplementedError"]

[tool.vulture]
paths = ["src/cartola"]
min_confidence = 80
sort_by_size = true
verbose = true

[tool.kedro_telemetry]
project_id = "42b2b09b512749d19e6796615fd16808"
