[project]
name = "cartola"
version = "0.2.0"
description = "Local pipeline that aggregates Cartola FC data (2014–2026) into a single harmonized CSV. Plus exploratory analyses in R/Python."
authors = [{ name = "Henrique Gomide", email = "henriquepgomide@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2,<3.0",
    "sf-hamilton>=1.83",
    "typer>=0.12",
    "pandera>=0.20,<2.0",
    "unidecode>=1.3.6",
    "pyarrow>=15.0",
    "requests>=2.31",
]

[project.optional-dependencies]
ui = ["sf-hamilton-ui>=0.0.17"]

[project.scripts]
cartola = "cartola.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cartola"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "pre-commit>=3.7",
    "ruff>=0.6",
    "mypy>=1.10",
    "nbstripout>=0.7",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import order)
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E203",  # whitespace before ':' (ruff-format compatibility)
]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/cartola -ra"
testpaths = ["tests"]

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
